footer alignment issue fixed and added cursor on cards hover

--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,9 @@ body{
 .card:hover{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
+.aboutus .card:hover{
+    cursor: pointer;
+}
 
 .howitworks{
     background: url('../images/bg1-hiw.jpg');
@@ -187,6 +190,7 @@ body{
 
 .cpackages .card:hover{
     box-shadow: 12px 12px 16px 0 rgba(0,0,0,0.2);
+    cursor: pointer;
 }
 
 
@@ -200,7 +204,7 @@ body{
 
 .contactus{
     background-color: #f7f7f7;
-    height:600px;
+    height:640px;
 }
 
 .contactus i{
@@ -313,6 +317,7 @@ footer p{
     .cpackages .col-sm-3{
         padding-top: 10px;
     }
+
 
     .howitworks {
         height: auto !important;
